--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
    <!--==================== CSS ====================-->
    <link rel="stylesheet" href="assets/css/styles.css">
 
-   <title>Responsive Portfolio Website</title>
+   <title>Samuel Juan</title>
 </head>
 
 <body>
@@ -71,7 +71,7 @@
    <!--==================== MAIN ====================-->
    <main class="main">
       <!--==================== HOME ====================-->
-      <section class="home section" id="home">
+      <section class="home section" id="home">        
          <div class="home__container container grid">
             <div class="home__content grid">
                <div class="home__social">
@@ -81,8 +81,8 @@
                   <a href="" class="home__social-icon" target="_blank">
                      <i class="uil uil-dribbble"></i>
                   </a>
-                  <a href="" class="home__social-icon" target="_blank">
-                     <i class="uil uil-github-alt"></i>
+                  <a                                                                                                                                                                           ]               \                          [               [ [                                                         [     [    [    [        \                                ]]]]]]]]]]       href="" class="home__social-icon" target="_blank">
+                     <i class="uil uil-github-alt"></i>                                                       
                   </a>
                </div>
                <div class="home__img">
@@ -107,10 +107,11 @@
                </div>
                <div class="home__data">
                   <h1 class="home__title">Hi, I'am Samuel</h1>
-                  <h3 class="home__subtitle">Frontend developer</h3>
-                  <p class="home__description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Est expedita
-                     nemo quisquam, suscipit earum, saepe, laboriosam quod rerum tenetur assumenda incidunt? Illo
-                     reiciendis officiis earum voluptatibus repellendus repellat provident aspernatur!</p>
+                  <h3 class="home__subtitle">Mahasiswa</h3>
+                  <p class="home__description">Orang yang simple, mau mencoba hal-hal baru, dan mudah untuk
+                     beradaptasi. Memiliki semangat juang yang tinggi dan gigih dalam
+                     memecahkan suatu masalah merupakan salah satu kelebihan yang
+                     dimilikinya.</p>
                   <a href="#contact" class="button button--flex">
                      Contact Me <i class="uil uil-message button__icon"></i>
                   </a>
@@ -140,17 +141,17 @@
                   accusantium ex voluptates, maiores cupiditate.</p>
                <div class="about__info">
                   <div>
-                     <span class="about__info-title">08+</span>
+                     <span class="about__info-title">1+</span>
                      <span class="about__info-name">Years <br> experience</span>
                   </div>
 
                   <div>
-                     <span class="about__info-title">20+</span>
+                     <span class="about__info-title">5+</span>
                      <span class="about__info-name">Completed <br> project</span>
                   </div>
 
                   <div>
-                     <span class="about__info-title">05+</span>
+                     <span class="about__info-title">1</span>
                      <span class="about__info-name">Companies <br> experience</span>
                   </div>
                </div>
@@ -232,7 +233,7 @@
                      <i class="uil uil-server-network skills__icon"></i>
 
                      <div>
-                        <h1 class="skills__title">Backend developer</h1>
+                        <h1 class="skills__title">Personal Skill</h1>
                         <span class="skills__subtitle">More than 2 years </span>
                      </div>
 
@@ -342,12 +343,12 @@
             <div class="qualification__tabs">
                <div class="qualification__button button--flex qualification__active" data-target='#education'>
                   <i class="uil uil-graduation-cap qualification__icon"></i>
-                  Education
+                  Pendidikan
                </div>
 
                <div class="qualification__button button--flex" data-target="#work">
                   <i class="uil uil-briefcase-alt qualification__icon"></i>
-                  Work
+                  Organisasi
                </div>
             </div>
 
@@ -357,11 +358,11 @@
                   <!--==================== QUALIFICATION 1====================-->
                   <div class="qualification__data">
                      <div>
-                        <h3 class="qualification__title"> Computer Enginner</h3>
-                        <span class="qualification__subtitle">Peru - University</span>
+                        <h3 class="qualification__title">Teknik Informatika</h3>
+                        <span class="qualification__subtitle">Universitas Kristen Maranatha, Bandung <br>IPK: 3.80/4.00</span>
                         <div class="qualification__calendar">
                            <i class="uil uil-calendar-alt"></i>
-                           2009 - 2014
+                           2019-Sekarang
                         </div>
                      </div>
                      <div>
@@ -375,51 +376,18 @@
 
                      <div>
                         <span class="qualification__rounder"></span>
-                        <span class="qualification__line"></span>
-                     </div>
-
-                     <div>
-                        <h3 class="qualification__title"> Computer Enginner</h3>
-                        <span class="qualification__subtitle">Peru - University</span>
-                        <div class="qualification__calendar">
-                           <i class="uil uil-calendar-alt"></i>
-                           2009 - 2014
-                        </div>
-                     </div>
-
-                  </div>
-                  <!--==================== QUALIFICATION 3====================-->
-                  <div class="qualification__data">
-                     <div>
-                        <h3 class="qualification__title"> Computer Enginner</h3>
-                        <span class="qualification__subtitle">Peru - University</span>
-                        <div class="qualification__calendar">
-                           <i class="uil uil-calendar-alt"></i>
-                           2009 - 2014
-                        </div>
-                     </div>
-                     <div>
-                        <span class="qualification__rounder"></span>
-                        <span class="qualification__line"></span>
-                     </div>
-                  </div>
-                  <!--==================== QUALIFICATION 4====================-->
-                  <div class="qualification__data">
-                     <div></div>
-
-                     <div>
-                        <span class="qualification__rounder"></span>
                         <!-- <span class="qualification__line"></span> -->
                      </div>
 
                      <div>
-                        <h3 class="qualification__title"> Computer Enginner</h3>
-                        <span class="qualification__subtitle">Peru - University</span>
+                        <h3 class="qualification__title">Ilmu Pengetahuan Sosial</h3>
+                        <span class="qualification__subtitle">SMA Seminari Menengah Mertoyudan, Magelang</span>
                         <div class="qualification__calendar">
                            <i class="uil uil-calendar-alt"></i>
-                           2009 - 2014
+                           2014-2018
                         </div>
                      </div>
+
                   </div>
                </div>
 
@@ -428,11 +396,11 @@
                   <!--==================== QUALIFICATION 1====================-->
                   <div class="qualification__data">
                      <div>
-                        <h3 class="qualification__title"> Computer Enginner</h3>
-                        <span class="qualification__subtitle">Peru - University</span>
+                        <h3 class="qualification__title"> Senat Mahasiswa Universitas Kristen Maranatha</h3>
+                        <span class="qualification__subtitle">Divisi non-akademik </span>
                         <div class="qualification__calendar">
                            <i class="uil uil-calendar-alt"></i>
-                           2009 - 2014
+                           2021
                         </div>
                      </div>
                      <div>
@@ -447,34 +415,18 @@
 
                      <div>
                         <span class="qualification__rounder"></span>
-                        <span class="qualification__line"></span>
-                     </div>
-
-                     <div>
-                        <h3 class="qualification__title"> Computer Enginner</h3>
-                        <span class="qualification__subtitle">Peru - University</span>
-                        <div class="qualification__calendar">
-                           <i class="uil uil-calendar-alt"></i>
-                           2009 - 2014
-                        </div>
-                     </div>
-
-                  </div>
-
-                  <!--==================== QUALIFICATION 3====================-->
-                  <div class="qualification__data">
-                     <div>
-                        <h3 class="qualification__title"> Computer Enginner</h3>
-                        <span class="qualification__subtitle">Peru - University</span>
-                        <div class="qualification__calendar">
-                           <i class="uil uil-calendar-alt"></i>
-                           2009 - 2014
-                        </div>
-                     </div>
-                     <div>
-                        <span class="qualification__rounder"></span>
                         <!-- <span class="qualification__line"></span> -->
                      </div>
+
+                     <div>
+                        <h3 class="qualification__title"> OSIS SMA Seminari Mertoyudan</h3>
+                        <!-- <span class="qualification__subtitle">Peru - University</span> -->
+                        <div class="qualification__calendar">
+                           <i class="uil uil-calendar-alt"></i>
+                           2015-2017
+                        </div>
+                     </div>
+
                   </div>
                </div>
             </div>
