--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
    <!--==================== MAIN ====================-->
    <main class="main">
       <!--==================== HOME ====================-->
-      <section class="home section" id="home">        
+      <section class="home section" id="home">
          <div class="home__container container grid">
             <div class="home__content grid">
                <div class="home__social">
@@ -81,8 +81,8 @@
                   <a href="" class="home__social-icon" target="_blank">
                      <i class="uil uil-dribbble"></i>
                   </a>
-                  <a                                                                                                                                                                           ]               \                          [               [ [                                                         [     [    [    [        \                                ]]]]]]]]]]       href="" class="home__social-icon" target="_blank">
-                     <i class="uil uil-github-alt"></i>                                                       
+                  <a href="" class="home__social-icon" target="_blank">
+                     <i class="uil uil-github-alt"></i>
                   </a>
                </div>
                <div class="home__img">
@@ -100,18 +100,16 @@
                          129.362C2.45775 97.8511 -7.48481 59.1033 6.67581 34.5279C20.9871 10.1032 59.7028 
                          -0.149132 97.9666 0.00163737C136.23 0.303176 174.193 10.857 190.312 36.4879Z" />
 
-                        <image class="home__blob-img" x='12' y='18'
-                           xlink:href="assets/img/DSC08061-removebg-preview.png" />
+                        <image class="home__blob-img" x='-20' y='' xlink:href="assets/img/DSC08061.jpg" />
                      </g>
                   </svg>
                </div>
                <div class="home__data">
                   <h1 class="home__title">Hi, I'am Samuel</h1>
                   <h3 class="home__subtitle">Mahasiswa</h3>
-                  <p class="home__description">Orang yang simple, mau mencoba hal-hal baru, dan mudah untuk
-                     beradaptasi. Memiliki semangat juang yang tinggi dan gigih dalam
-                     memecahkan suatu masalah merupakan salah satu kelebihan yang
-                     dimilikinya.</p>
+                  <p class="home__description">Mahasiswa S1 fakultas Teknik Informatika Universitas Kristen Maranatha.
+                     Memiliki ketertarikan di bidang web developer, terlebih frontend developer. Selalu totalitas dalam
+                     mengerjakan sesuatu sehingga menghasilkan pekerjaan yang berkualitas</p>
                   <a href="#contact" class="button button--flex">
                      Contact Me <i class="uil uil-message button__icon"></i>
                   </a>
@@ -146,14 +144,14 @@
                   </div>
 
                   <div>
-                     <span class="about__info-title">5+</span>
-                     <span class="about__info-name">Completed <br> project</span>
+                     <span class="about__info-title">10</span>
+                     <span class="about__info-name">Proyek<br> terselesaikan</span>
                   </div>
 
-                  <div>
+                  <!-- <div>
                      <span class="about__info-title">1</span>
                      <span class="about__info-name">Companies <br> experience</span>
-                  </div>
+                  </div> -->
                </div>
                <div class="about__buttons">
                   <a download="" href="assets/pdf/Samuel-Cv.pdf" class="button button--flex">
@@ -178,7 +176,7 @@
 
                      <div>
                         <h1 class="skills__title">Frontend developer</h1>
-                        <span class="skills__subtitle">More than 4 years </span>
+                        <span class="skills__subtitle">More than 1 years </span>
                      </div>
 
                      <i class="uil uil-angle-down skills__arrow"></i>
@@ -217,11 +215,11 @@
 
                      <div class="skills__data">
                         <div class="skills__titles">
-                           <h3 class="skills__name">React</h3>
-                           <span class="skills__number">85%</span>
+                           <h3 class="skills__name">Bootstrap</h3>
+                           <span class="skills__number">80%</span>
                         </div>
                         <div class="skills_bar">
-                           <span class="skills__percentage skills__react"></span>
+                           <span class="skills__percentage skills__bootstrap"></span>
                         </div>
                      </div>
                   </div>
@@ -230,11 +228,11 @@
                <!--==================== SKILLS 2====================-->
                <div class="skills__content skills__close">
                   <div class="skills__header">
-                     <i class="uil uil-server-network skills__icon"></i>
+                     <i class="uil uil-database skills__icon"></i>
 
                      <div>
-                        <h1 class="skills__title">Personal Skill</h1>
-                        <span class="skills__subtitle">More than 2 years </span>
+                        <h1 class="skills__title">Database</h1>
+                        <span class="skills__subtitle">More than 1 years </span>
                      </div>
 
                      <i class="uil uil-angle-down skills__arrow"></i>
@@ -244,7 +242,7 @@
                      <div class="skills__data">
                         <div class="skills__titles">
                            <h3 class="skills__name">PHP</h3>
-                           <span class="skills__number">80%</span>
+                           <span class="skills__number">60%</span>
                         </div>
                         <div class="skills_bar">
                            <span class="skills__percentage skills__php"></span>
@@ -253,83 +251,109 @@
 
                      <div class="skills__data">
                         <div class="skills__titles">
-                           <h3 class="skills__name">Node JS</h3>
-                           <span class="skills__number">70%</span>
+                           <h3 class="skills__name">Database</h3>
+                           <span class="skills__number">60%</span>
                         </div>
                         <div class="skills_bar">
-                           <span class="skills__percentage skills__node"></span>
-                        </div>
-                     </div>
-
-                     <div class="skills__data">
-                        <div class="skills__titles">
-                           <h3 class="skills__name">Firebase</h3>
-                           <span class="skills__number">50%</span>
-                        </div>
-                        <div class="skills_bar">
-                           <span class="skills__percentage skills__firebase"></span>
-                        </div>
-                     </div>
-
-                     <div class="skills__data">
-                        <div class="skills__titles">
-                           <h3 class="skills__name">Python</h3>
-                           <span class="skills__number">75%</span>
-                        </div>
-                        <div class="skills_bar">
-                           <span class="skills__percentage skills__python"></span>
+                           <span class="skills__percentage skills__database"></span>
                         </div>
                      </div>
                   </div>
                </div>
             </div>
-            <!--==================== SKILLS 3====================-->
-            <div class="skills__content skills__close">
-               <div class="skills__header">
-                  <i class="uil uil-swatchbook skills__icon"></i>
 
-                  <div>
-                     <h1 class="skills__title">Designer</h1>
-                     <span class="skills__subtitle">More than 5 years </span>
-                  </div>
-
-                  <i class="uil uil-angle-down skills__arrow"></i>
-               </div>
-
-               <div class="skills__list grid">
-                  <div class="skills__data">
-                     <div class="skills__titles">
-                        <h3 class="skills__name">AI</h3>
-                        <span class="skills__number">80%</span>
-                     </div>
-                     <div class="skills_bar">
-                        <span class="skills__percentage skills__ai"></span>
-                     </div>
-                  </div>
-
-                  <div class="skills__data">
-                     <div class="skills__titles">
-                        <h3 class="skills__name">Figma</h3>
-                        <span class="skills__number">70%</span>
-                     </div>
-                     <div class="skills_bar">
-                        <span class="skills__percentage skills__figma"></span>
-                     </div>
-                  </div>
-
-                  <div class="skills__data">
-                     <div class="skills__titles">
-                        <h3 class="skills__name">AE</h3>
-                        <span class="skills__number">50%</span>
-                     </div>
-                     <div class="skills_bar">
-                        <span class="skills__percentage skills__ae"></span>
-                     </div>
-                  </div>
-               </div>
-            </div>
             <div>
+               <!--==================== SKILLS 3====================-->
+               <div class="skills__content skills__close">
+                  <div class="skills__header">
+                     <i class="uil uil-swatchbook skills__icon"></i>
 
+                     <div>
+                        <h1 class="skills__title">Designer</h1>
+                        <span class="skills__subtitle">More than 1 years </span>
+                     </div>
+
+                     <i class="uil uil-angle-down skills__arrow"></i>
+                  </div>
+
+                  <div class="skills__list grid">
+                     <div class="skills__data">
+                        <div class="skills__titles">
+                           <h3 class="skills__name">Adobe Illustrator</h3>
+                           <span class="skills__number">80%</span>
+                        </div>
+                        <div class="skills_bar">
+                           <span class="skills__percentage skills__ai"></span>
+                        </div>
+                     </div>
+
+                     <div class="skills__data">
+                        <div class="skills__titles">
+                           <h3 class="skills__name">AE</h3>
+                           <span class="skills__number">60%</span>
+                        </div>
+                        <div class="skills_bar">
+                           <span class="skills__percentage skills__ae"></span>
+                        </div>
+                     </div>
+
+                     <div class="skills__data">
+                        <div class="skills__titles">
+                           <h3 class="skills__name">Figma</h3>
+                           <span class="skills__number">85%</span>
+                        </div>
+                        <div class="skills_bar">
+                           <span class="skills__percentage skills__figma"></span>
+                        </div>
+                     </div>
+                  </div>
+               </div>
+
+               <!--==================== SKILLS 4====================-->
+               <div class="skills__content skills__close">
+                  <div class="skills__header">
+                     <i class="uil uil-head-side skills__icon"></i>
+
+                     <div>
+                        <h1 class="skills__title">Personal</h1>
+                        <span class="skills__subtitle"></span>
+                     </div>
+
+                     <i class="uil uil-angle-down skills__arrow"></i>
+                  </div>
+
+                  <div class="skills__list grid">
+                     <div class="skills__data">
+                        <div class="skills__titles">
+                           <h3 class="skills__name">Manajemen</h3>
+                           <span class="skills__number">80%</span>
+                        </div>
+                        <div class="skills_bar">
+                           <span class="skills__percentage skills__manajemen"></span>
+                        </div>
+                     </div>
+
+                     <div class="skills__data">
+                        <div class="skills__titles">
+                           <h3 class="skills__name">Kerja Tim</h3>
+                           <span class="skills__number">85%</span>
+                        </div>
+                        <div class="skills_bar">
+                           <span class="skills__percentage skills__tim"></span>
+                        </div>
+                     </div>
+
+                     <div class="skills__data">
+                        <div class="skills__titles">
+                           <h3 class="skills__name">Komunikasi</h3>
+                           <span class="skills__number">95%</span>
+                        </div>
+                        <div class="skills_bar">
+                           <span class="skills__percentage skills__komunikasi"></span>
+                        </div>
+                     </div>
+                  </div>
+               </div>
             </div>
          </div>
       </section>
@@ -346,9 +370,14 @@
                   Pendidikan
                </div>
 
+               <div class="qualification__button button--flex" data-target="#organization">
+                  <i class="uil uil-channel qualification__icon"></i>
+                  Organisasi
+               </div>
+
                <div class="qualification__button button--flex" data-target="#work">
                   <i class="uil uil-briefcase-alt qualification__icon"></i>
-                  Organisasi
+                  Kerja
                </div>
             </div>
 
@@ -359,7 +388,8 @@
                   <div class="qualification__data">
                      <div>
                         <h3 class="qualification__title">Teknik Informatika</h3>
-                        <span class="qualification__subtitle">Universitas Kristen Maranatha, Bandung <br>IPK: 3.80/4.00</span>
+                        <span class="qualification__subtitle">Universitas Kristen Maranatha, Bandung <br>IPK:
+                           3.80/4.00</span>
                         <div class="qualification__calendar">
                            <i class="uil uil-calendar-alt"></i>
                            2019-Sekarang
@@ -392,7 +422,7 @@
                </div>
 
                <!--==================== QUALIFICATION CONTENT 2====================-->
-               <div class="qualification__content" data-content id="work">
+               <div class="qualification__content" data-content id="organization">
                   <!--==================== QUALIFICATION 1====================-->
                   <div class="qualification__data">
                      <div>
@@ -429,7 +459,27 @@
 
                   </div>
                </div>
+
+               <!--==================== QUALIFICATION CONTENT 3====================-->
+               <div class="qualification__content" data-content id="work">
+                  <!--==================== QUALIFICATION 1====================-->
+                  <div class="qualification__data">
+                     <div>
+                        <h3 class="qualification__title"> Liberty</h3>
+                        <span class="qualification__subtitle">Event Organizer </span>
+                        <div class="qualification__calendar">
+                           <i class="uil uil-calendar-alt"></i>
+                           2018-2019
+                        </div>
+                     </div>
+                     <div>
+                        <span class="qualification__rounder"></span>
+                        <!-- <span class="qualification__line"></span> -->
+                     </div>
+                  </div>
+               </div>
             </div>
+         </div>
          </div>
       </section>
 
@@ -773,32 +823,34 @@
                </div>
             </div>
 
-            <form action="" class="contact__form grid">
+            <form action="https://formspree.io/f/xbjqyble" class="contact__form grid" method="POST" id="contact-form">
                <div class="contact__inputs grid">
                   <div class="contact__content">
-                     <label for="" class="contact__label">Name</label>
-                     <input type="text" class="contact__input">
+                     <label for="name" class="contact__label">Name</label>
+                     <input type="text" class="contact__input" required id="name" name="name">
                   </div>
                   <div class="contact__content">
-                     <label for="" class="contact__label">Email</label>
-                     <input type="email" class="contact__input">
+                     <label for="email" class="contact__label">Email</label>
+                     <input type="email" class="contact__input" id="email" name="email" required
+                        pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}" title="Alamat email tidak valid">
                   </div>
                </div>
                <div class="contact__content">
-                  <label for="" class="contact__label">Project</label>
-                  <input type="text" class="contact__input">
+                  <label for="project" class="contact__label">Project</label>
+                  <input type="text" class="contact__input" id="project" name="project">
                </div>
                <div class="contact__content">
-                  <label for="" class="contact__label">Message</label>
-                  <textarea name="" id="" cols="0" rows="7" class="contact__input"></textarea>
+                  <label for="message" class="contact__label">Message</label>
+                  <textarea name="message" id="message" cols="0" rows="7" class="contact__input" required></textarea>
                </div>
 
                <div>
-                  <a href="#" class="button button--flex">
-                     Send Message
+                  <button class="button button--flex">
+                     Send message
                      <i class="uil uil-message button__icon"></i>
-                  </a>
+                  </button>
                </div>
+               <div id="status"></div>
             </form>
          </div>
       </section>
