--- a/index.html
+++ b/index.html
@@ -486,7 +486,7 @@
       <!--==================== SERVICES ====================-->
       <section class="services section" id="services">
          <h2 class="section__title">Services</h2>
-         <span class="section__subtitle">What i offer</span>
+         <span class="section__subtitle">What I offer</span>
 
          <div class="services__container container grid">
             <!--==================== SERVICES 1====================-->
@@ -509,19 +509,15 @@
                      <ul class="services__modal-services grid">
                         <li class="services__modal-service">
                            <i class="uil uil-check-circle services__modal-icon"></i>
-                           <p>I develop the user interface</p>
+                           <p>Mendesain interface</p>
                         </li>
                         <li class="services__modal-service">
                            <i class="uil uil-check-circle services__modal-icon"></i>
-                           <p>Web page development</p>
+                           <p>Berupa mobile/web</p>
                         </li>
                         <li class="services__modal-service">
                            <i class="uil uil-check-circle services__modal-icon"></i>
-                           <p>I create ux element interactions</p>
-                        </li>
-                        <li class="services__modal-service">
-                           <i class="uil uil-check-circle services__modal-icon"></i>
-                           <p>I position your company brand</p>
+                           <p>Menggunakan Figma</p>
                         </li>
                      </ul>
                   </div>
@@ -547,19 +543,15 @@
                      <ul class="services__modal-services grid">
                         <li class="services__modal-service">
                            <i class="uil uil-check-circle services__modal-icon"></i>
-                           <p>I develop the user interface</p>
+                           <p>Menguasai HTML dan CSS</p>
                         </li>
                         <li class="services__modal-service">
                            <i class="uil uil-check-circle services__modal-icon"></i>
-                           <p>Web page development</p>
+                           <p>Menggunakan berbagai Framework</p>
                         </li>
                         <li class="services__modal-service">
                            <i class="uil uil-check-circle services__modal-icon"></i>
-                           <p>I create ux element interactions</p>
-                        </li>
-                        <li class="services__modal-service">
-                           <i class="uil uil-check-circle services__modal-icon"></i>
-                           <p>I position your company brand</p>
+                           <p>Responsive Design</p>
                         </li>
                      </ul>
                   </div>
@@ -615,14 +607,15 @@
             <div class="swiper-wrapper">
                <!--==================== PORTFOLIO 1====================-->
                <div class="portfolio__content grid swiper-slide">
-                  <img src="assets/img/portfolio1.jpg" alt="" class="portfolio__img">
+                  <img src="assets/img/portfolio1.png" alt="" class="portfolio__img">
 
                   <div class="portfolio__data">
-                     <h3 class="portfolio__title">Modern website</h3>
-                     <p class="portfolio__description">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        Assumenda optio maxime illum! Magnam voluptate necessitatibus quae eos ipsum magni obcaecati
-                        dolores nobis, sit culpa aliquam natus, debitis nulla deserunt suscipit.</p>
-                     <a href="" class="button button--flex button--small portfolio__button">
+                     <h3 class="portfolio__title">Nung.Go</h3>
+                     <p class="portfolio__description">Desain mobile untuk pemesanan tempat di restoran dikala pandemi.
+                        Dikerjakan untuk memenuhi nilai Ujian Tengah Semester(UTS) Teknologi Multimediapada semester 3
+                     </p>
+                     <a href="https://www.figma.com/file/awN8LpW9OwWYRQf8vAxnM3/Tu-Bes" target="_blank"
+                        class="button button--flex button--small portfolio__button">
                         Demo
                         <i class="uil uil-arrow-right button__icon"></i>
                      </a>
@@ -631,14 +624,13 @@
 
                <!--==================== PORTFOLIO 2====================-->
                <div class="portfolio__content grid swiper-slide">
-                  <img src="assets/img/portfolio2.jpg" alt="" class="portfolio__img">
+                  <img src="assets/img/portfolio2.png" alt="" class="portfolio__img">
 
                   <div class="portfolio__data">
-                     <h3 class="portfolio__title">Modern website</h3>
-                     <p class="portfolio__description">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        Assumenda optio maxime illum! Magnam voluptate necessitatibus quae eos ipsum magni obcaecati
-                        dolores nobis, sit culpa aliquam natus, debitis nulla deserunt suscipit.</p>
-                     <a href="" class="button button--flex button--small portfolio__button">
+                     <h3 class="portfolio__title">Pegadaian Pancong</h3>
+                     <p class="portfolio__description">Web sederhana untuk informasi singkat mengenai pegadaian
+                        "Pancong". Dibuat untuk memenuhi Ujian Akhir Semester(UAS) Rekayasa Perangkat Lunak 1 Semester 3</p>
+                     <a href="https://pegadaianpancong.netlify.app/"  target="_blank" class="button button--flex button--small portfolio__button">
                         Demo
                         <i class="uil uil-arrow-right button__icon"></i>
                      </a>
@@ -680,7 +672,7 @@
          <div class="project__bg">
             <div class="project__container container grid">
                <div class="project__data">
-                  <h2 class="project__title">You have new project</h2>
+                  <h2 class="project__title">You have new project?</h2>
                   <p class="project__description"> Contact me now</p>
                   <a href="#contact" class="button button--flex button--white">
                      Contact Me
