--- a/index.html
+++ b/index.html
@@ -78,7 +78,8 @@
                   <a href="https://www.instagram.com/samueljuan_/" class="home__social-icon" target="_blank">
                      <i class="uil uil-instagram-alt"></i>
                   </a>
-                  <a href="https://www.linkedin.com/in/samuel-juan-5798781a6/" class="home__social-icon" target="_blank">
+                  <a href="https://www.linkedin.com/in/samuel-juan-5798781a6/" class="home__social-icon"
+                     target="_blank">
                      <i class="uil uil-linkedin"></i>
                   </a>
                   <a href="https://github.com/Samueljuan" class="home__social-icon" target="_blank">
@@ -107,7 +108,7 @@
                <div class="home__data">
                   <h1 class="home__title">Hi, I'am Samuel</h1>
                   <h3 class="home__subtitle">Mahasiswa</h3>
-                  <p class="home__description">Mahasiswa S1 fakultas Teknik Informatika Universitas Kristen Maranatha.
+                  <p class="home__description">Mahasiswa S1 jurusan Teknik Informatika Universitas Kristen Maranatha.
                      Memiliki ketertarikan di bidang web developer, terlebih frontend developer. Selalu totalitas dalam
                      mengerjakan sesuatu sehingga menghasilkan pekerjaan yang berkualitas</p>
                   <a href="#contact" class="button button--flex">
