12 Jun 2024 3rd revision

--- a/index.html
+++ b/index.html
@@ -1043,7 +1043,7 @@
       <div class="footer__container container grid">
         <div>
           <h1 class="footer__title">Samuel</h1>
-          <!-- <span class="footer__subtitle">Frontend developer</span> -->
+          <span class="footer__subtitle">Communication and Product Specialist</span>
         </div>
 
         <ul class="footer__links">
@@ -1054,7 +1054,7 @@
             <a href="#portfolio" class="footer__link">Portfolio</a>
           </li>
           <li>
-            <a href="#contact" class="footer__link">Contact me</a>
+            <a href="#contact" class="footer__link">Contact Me</a>
           </li>
         </ul>
 
