--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             </a>
           </div>
           <div class="home__data">
-            <h1 class="home__title">Hi, I'am Samuel</h1>
+            <h1 class="home__title">Hi, I am Samuel</h1>
             <h3 class="home__subtitle">Communication and Product Specialist</h3>
             
             <p class="home__description">Samuel Juan is a skilled Communications Specialist with over two years of experience in government and startups. He excels in internal and external communications, particularly in IT and front-end development. Holding a Bachelor of Science in Computer and Information Science from Maranatha Christian University with a GPA of 3.91/4.00, Samuel has worked at PT Akselerasi Karir Nusantara, and Kampus Merdeka. His expertise includes customer success, and community engagement. Proficient in React.JS, HTML, CSS, JavaScript, Samuel is known for enhancing user experience and customer satisfaction. His soft skills include teamwork, communication, leadership, critical thinking, and problem-solving.
@@ -838,6 +838,44 @@
               </a>
             </div>
           </div>
+<!-- Tugas Akhir -->
+          <div class="portfolio__content grid swiper-slide">
+            <img src="assets/img/starley.png" alt="" class="portfolio__img">
+
+            <div class="portfolio__data">
+              <h3 class="portfolio__title">Starley</h3>
+              <p class="portfolio__description">I designed and implemented the front-end of Starley’s website, a startup specializing in skincare products, as a key part of my graduation portfolio. This project showcases my ability to create visually appealing and user-friendly interfaces, blending modern design principles with intuitive navigation. It highlights my skills in front-end development and my talent for translating business goals into compelling digital experiences.
+              </p>
+              <div>
+                <a href="https://www.figma.com/design/z8oCdcT8gHD8R3P3fPzOo0/Landing-Page-Starley-%5BSAM-EDIT%5D?node-id=912-2868&t=LK2WxhWIURqSxlSj-1" target="_blank"
+                  class="button button--flex button--small portfolio__button">
+                  Design
+                  <i class="uil uil-arrow-right button__icon"></i>
+                </a>
+                <a href="https://starley-seven.vercel.app" target="_blank"
+                  class="button button--flex button--small portfolio__button">
+                  Website
+                  <i class="uil uil-arrow-right button__icon"></i>
+                </a>
+              </div>
+              
+            </div>
+          </div>
+<!-- Nung.go -->
+          <div class="portfolio__content grid swiper-slide">
+            <img src="assets/img/portfolio1.png" alt="" class="portfolio__img">
+
+            <div class="portfolio__data">
+              <h3 class="portfolio__title">Nung.Go</h3>
+              <p class="portfolio__description">Nung.Go is an innovative app I designed during my third semester in college, aimed at streamlining the process of booking restaurant tables during the COVID-19 pandemic. This dummy app showcases my ability to create user-centric solutions with a focus on safety and convenience. Nung.Go exemplifies my commitment to leveraging technology to solve real-world challenges.
+              </p>
+              <a href="https://www.figma.com/file/awN8LpW9OwWYRQf8vAxnM3/Tu-Bes" target="_blank"
+                class="button button--flex button--small portfolio__button">
+                Demo
+                <i class="uil uil-arrow-right button__icon"></i>
+              </a>
+            </div>
+          </div>
 <!-- UI CISE -->
           <div class="portfolio__content grid swiper-slide">
             <img src="assets/img/UI CISE.png" alt="" class="portfolio__img">
@@ -897,7 +935,7 @@
 
             <div class="portfolio__data">
               <h3 class="portfolio__title">Festifal Kampus Merdeka</h3>
-              <p class="portfolio__description">I had the privilege of representing the MSIB program at the Kampus Merdeka Festival, held in both Bali and Jakarta. My role involved engaging participants and promoting the MSIB program, with the grand finale taking place in Bali. I coordinated over 30 participants, assisting them throughout the preparation, departure, and return to their respective hometowns. This experience honed my organizational and leadership skills, contributing to a successful and memorable event.
+              <p class="portfolio__description">I had the privilege of representing the MSIB program at the Kampus Merdeka Festival, held in both Bali and Jakarta. My role involved engaging with participants and promoting the MSIB program, with the grand finale taking place in Bali. I coordinated over 30 participants, assisting them throughout the preparation, departure, and return to their hometowns. This experience honed my organizational and leadership skills, contributing to a successful and memorable event.
               </p>
               <a href="https://diktiristek.kemdikbud.go.id/festival-kampus-merdeka-2022/" target="_blank"
                 class="button button--flex button--small portfolio__button">
@@ -928,28 +966,12 @@
             <div class="portfolio__data">
               <h3 class="portfolio__title">MSIB Instagram</h3>
               <p class="portfolio__description"> I was responsible for coordinating the MSIB Instagram account to promote and inform about various MSIB activities. 
-                I developed diverse content ideas, disseminated positive news about MSIB activities, and created educational content about MSIB. 
-                Through engaging and strategic content creation, I successfully enhanced the online presence and awareness of MSIB programs. 
-                My efforts helped to connect and inform a broader audience about the benefits and opportunities offered by MSIB.
+                I developed various content ideas, shared positive news about MSIB activities, and created educational materials about MSIB, highlighting its benefits and opportunities. 
+                Through engaging and strategic content creation, I successfully enhanced the online presence and awareness of MSIB programs.
               </p>
               <a href="https://www.instagram.com/magangmerdeka/" target="_blank"
                 class="button button--flex button--small portfolio__button">
                 See Instagram
-                <i class="uil uil-arrow-right button__icon"></i>
-              </a>
-            </div>
-          </div>
-<!-- Nung.go -->
-          <div class="portfolio__content grid swiper-slide">
-            <img src="assets/img/portfolio1.png" alt="" class="portfolio__img">
-
-            <div class="portfolio__data">
-              <h3 class="portfolio__title">Nung.Go</h3>
-              <p class="portfolio__description">Nung.Go is an innovative app I designed during my third semester in college, aimed at streamlining the process of booking restaurant tables during the COVID-19 pandemic. This dummy app showcases my ability to create user-centric solutions with a focus on safety and convenience. Nung.Go exemplifies my commitment to leveraging technology to solve real-world challenges.
-              </p>
-              <a href="https://www.figma.com/file/awN8LpW9OwWYRQf8vAxnM3/Tu-Bes" target="_blank"
-                class="button button--flex button--small portfolio__button">
-                Demo
                 <i class="uil uil-arrow-right button__icon"></i>
               </a>
             </div>
