--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                  <span class="about__info-name">Companies <br> experience</span>
               </div> -->
           <div class="about__buttons">
-            <a download="" href="assets/pdf/CV_Samuel Juan Pranoto.pdf" class="button button--flex">
+            <a download="" href="assets/pdf/Resume_Samuel Juan Pranoto.pdf" class="button button--flex">
               Download CV <i class="uil uil-download-alt button__icon"></i>
             </a>
           </div>
